Fixed up files, added comments.

--- a/vis.ipynb
+++ b/vis.ipynb
@@ -49,21 +49,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 50,
    "id": "40671b82-aaf5-4350-8519-9c5b183711db",
    "metadata": {
     "tags": []
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "Text(0, 0.5, 'Player Count')"
-      ]
-     },
-     "execution_count": 46,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Min: 24\n",
+      "Max: 50\n",
+      "Mean: 32.88586956521739\n"
+     ]
     },
     {
      "data": {
@@ -97,7 +96,16 @@
     "plt.hist(age_dict, bins='auto')\n",
     "plt.title('Histogram of the Age of Players playing in the World Cup')\n",
     "plt.xlabel('Age')\n",
-    "plt.ylabel(\"Player Count\")"
+    "plt.ylabel(\"Player Count\")\n",
+    "miny = age_dict[0]\n",
+    "maxy = age_dict[0]\n",
+    "for i in age_dict:\n",
+    "    if i < miny:\n",
+    "        miny = i\n",
+    "    if i > maxy:\n",
+    "        maxy = i\n",
+    "print(f\"Min: {miny}\\nMax: {maxy}\")\n",
+    "print(f\"Mean: {np.mean(age_dict)}\")"
    ]
   },
   {
